Refactor confluent-utility, add multi-arch support

--- a/kafka/tools/confluent-utility/Dockerfile.arm64v8
+++ b/kafka/tools/confluent-utility/Dockerfile.arm64v8
@@ -23,19 +23,20 @@ RUN apt-key adv --keyserver keyserver.ubuntu.com --recv-keys CC86BB64 \
     && apt install yq -y \
   && rm -rf /var/lib/apt/lists/*
 
-# curl -O https://packages.confluent.io/archive/7.7/confluent-community-7.7.1.tar.gz
+ADD kubectl-arm64 /usr/local/bin/kubectl
+
 ADD confluent-community-7.7.1.tar.gz /opt
 
-# curl -O https://s3-us-west-2.amazonaws.com/confluent.cloud/confluent-cli/archives/latest/confluent_latest_linux_amd64.tar.gz
-ADD confluent_latest_linux_amd64.tar.gz /opt
+ADD confluent_linux_arm64.tar.gz /opt
 
-# curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-ADD awscliv2.zip /opt
+ADD awscli-exe-linux-aarch64.zip /opt
 
-RUN unzip /opt/awscliv2.zip && /aws/install && rm -r /aws
+RUN unzip /opt/awscli-exe-linux-aarch64.zip && /aws/install && rm -r /aws
 
 RUN ln -s /usr/bin/kafkacat /usr/bin/kcat
 
 ENV PATH="${PATH}:/opt/confluent-7.7.1/bin:/opt/confluent"
+
+RUN chmod +x /usr/local/bin/kubectl
 
 CMD ["tail", "-f", "/dev/null"]
