--- a/kafka/tools/confluent-utility/Dockerfile.arm64v8
+++ b/kafka/tools/confluent-utility/Dockerfile.arm64v8
@@ -39,4 +39,6 @@ ENV PATH="${PATH}:/opt/confluent-7.7.1/bin:/opt/confluent"
 
 RUN chmod +x /usr/local/bin/kubectl
 
+WORKDIR /root
+
 CMD ["tail", "-f", "/dev/null"]
