Add kafka-clients dependency

--- a/kafka/flink/flink-sql-cloud/1.20/pom.xml
+++ b/kafka/flink/flink-sql-cloud/1.20/pom.xml
@@ -71,6 +71,13 @@
         <version>${flink.version}</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients -->
+    <dependency>
+        <groupId>org.apache.kafka</groupId>
+        <artifactId>kafka-clients</artifactId>
+        <version>3.9.0</version>
+    </dependency>
+
   </dependencies>
 
   <build>
