--- a/kafka/tools/confluent-utility/Dockerfile.arm64v8
+++ b/kafka/tools/confluent-utility/Dockerfile.arm64v8
@@ -32,8 +32,10 @@ ADD confluent-8.0.0.tar.gz /opt
 ADD confluent_linux_arm64.tar.gz /opt
 
 ADD awscli-exe-linux-aarch64.zip /opt
-
 RUN unzip /opt/awscli-exe-linux-aarch64.zip && /aws/install && rm -r /aws
+
+ADD vault_1.20.1_linux_arm64.zip /opt
+RUN unzip /opt/vault_1.20.1_linux_arm64.zip -d /usr/local/bin
 
 RUN ln -s /usr/bin/kafkacat /usr/bin/kcat
 
