--- a/kafka/tools/confluent-utility/Dockerfile.amd64
+++ b/kafka/tools/confluent-utility/Dockerfile.amd64
@@ -1,5 +1,4 @@
-# FROM openjdk:11-buster
-FROM eclipse-temurin:17-jdk-focal
+FROM eclipse-temurin:17-jdk-noble
 
 RUN apt-get update \
   && apt-get install -y \
@@ -9,7 +8,7 @@ RUN apt-get update \
     vim \
     curl \
     telnet \
-    netcat \
+    netcat-traditional \
     less \
     ldap-utils \
     dnsutils \
@@ -34,8 +33,8 @@ ADD confluent_linux_amd64.tar.gz /opt
 ADD awscli-exe-linux-x86_64.zip /opt
 RUN unzip /opt/awscli-exe-linux-x86_64.zip && /aws/install && rm -r /aws
 
-ADD vault_1.20.1_linux_amd64.zip /opt
-RUN unzip /opt/vault_1.20.1_linux_amd64.zip -d /usr/local/bin
+ADD vault_1.20.2_linux_amd64.zip /opt
+RUN unzip /opt/vault_1.20.2_linux_amd64.zip -d /usr/local/bin
 
 RUN ln -s /usr/bin/kafkacat /usr/bin/kcat
 
